@@ -1,7 +1,5 @@
 package io.basc.framework.mapper.support;
 
-import java.util.ArrayList;
-import java.util.Iterator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,6 +18,7 @@ import io.basc.framework.mapper.Parameter;
 import io.basc.framework.mapper.ParameterDescriptor;
 import io.basc.framework.mapper.Setter;
 import io.basc.framework.util.Assert;
+import io.basc.framework.util.CollectionUtils;
 import io.basc.framework.util.Elements;
 import io.basc.framework.util.PredicateRegistry;
 import lombok.Data;
@@ -56,54 +55,33 @@ public class DefaultMappingStrategy implements MappingStrategy {
 		targetAccess.set(parameter);
 	}
 
-	private List<List<String>> recursion(Elements<Elements<String>> elements) {
-		List<List<String>> targetList = new ArrayList<>();
-		Iterator<Elements<String>> iterator = elements.iterator();
-		while (iterator.hasNext()) {
-			recursion(iterator, iterator.next().iterator(), new ArrayList<>(), targetList);
+	private String getName(MappingContext context, Field field) {
+		if (context == null) {
+			return field.getName();
 		}
-		return targetList;
+		return context.getContextFields().reverse().concat(Elements.singleton(field)).map((e) -> e.getName())
+				.collect(Collectors.joining("."));
 	}
 
-	private void recursion(Iterator<Elements<String>> iterator, Iterator<String> nameIterator, List<String> rootNames,
-			List<List<String>> targetList) {
-		if (nameIterator.hasNext()) {
-			String name = nameIterator.next();
-			List<String> list = new ArrayList<>(rootNames);
-			list.add(name);
-			if (iterator.hasNext()) {
-				recursion(iterator, nameIterator, list, targetList);
-			} else {
-				// 到底了
-				targetList.add(list);
-			}
+	private Elements<String> getAliasNames(MappingContext context, Field field) {
+		if (context == null) {
+			return Elements.singleton(field.getName()).concat(field.getAliasNames());
 		}
 
-		if (iterator.hasNext()) {
-			recursion(iterator, iterator.next().iterator(), rootNames, targetList);
-		}
-	}
-
-	private Elements<String> getSetterNames(MappingContext targetContext, Field targetField) {
-		if (targetContext == null) {
-			return Elements.singleton(targetField.getName()).concat(targetField.getAliasNames());
-		}
-
-		Elements<Field> fields = targetContext.parents().reverse().map((e) -> e.getField()).filter((e) -> e != null)
-				.concat(Elements.singleton(targetField));
+		Elements<Field> fields = context.getContextFields().reverse().concat(Elements.singleton(field));
 		// 组合出所有的名称
-		List<List<String>> recursionNames = recursion(
-				fields.map((e) -> Elements.singleton(e.getName()).concat(e.getAliasNames())));
-		return Elements.of(recursionNames.stream().map((e) -> e.stream().collect(Collectors.joining(".")))
-				.collect(Collectors.toList()));
+		List<Elements<String>> recursionNames = CollectionUtils.recursiveComposition(
+				fields.map((e) -> Elements.singleton(e.getName()).concat(e.getAliasNames())).toList());
+		return Elements.of(
+				recursionNames.stream().map((e) -> e.collect(Collectors.joining("."))).collect(Collectors.toList()));
 	}
 
 	@Override
 	public void transform(ObjectMapper objectMapper, ObjectAccess sourceAccess, MappingContext sourceContext,
 			Object target, TypeDescriptor targetType, MappingContext targetContext,
 			Mapping<? extends Field> targetMapping, Field targetField) throws MappingException {
-		Elements<String> setterNames = getSetterNames(targetContext, targetField);
-		Elements<Setter> setters = targetField.getSetters().flatMap((e) -> setterNames.map((name) -> e.rename(name)));
+		Elements<String> aliasNames = getAliasNames(targetContext, targetField);
+		Elements<Setter> setters = targetField.getSetters().flatMap((e) -> aliasNames.map((name) -> e.rename(name)));
 		for (Setter setter : setters) {
 			if (!predicateRegistry.test(setter)) {
 				// 只要有一个校验不通过就直接return
@@ -125,7 +103,7 @@ public class DefaultMappingStrategy implements MappingStrategy {
 
 		// 名称嵌套处理
 		Parameter parameter = null;
-		for (String name : setterNames) {
+		for (String name : aliasNames) {
 			parameter = sourceAccess.get(name);
 			if (parameter == null) {
 				continue;
@@ -160,8 +138,8 @@ public class DefaultMappingStrategy implements MappingStrategy {
 			MappingContext sourceContext, Mapping<? extends Field> sourceMapping, Object target,
 			TypeDescriptor targetType, MappingContext targetContext, Mapping<? extends Field> targetMapping,
 			Field targetField) throws MappingException {
-		Elements<String> setterNames = getSetterNames(targetContext, targetField);
-		Elements<Setter> setters = targetField.getSetters().flatMap((e) -> setterNames.map((name) -> e.rename(name)));
+		Elements<String> aliasNames = getAliasNames(targetContext, targetField);
+		Elements<Setter> setters = targetField.getSetters().flatMap((e) -> aliasNames.map((name) -> e.rename(name)));
 		for (Setter setter : setters) {
 			if (!predicateRegistry.test(setter)) {
 				// 只要有一个校验不通过就直接return
@@ -169,7 +147,7 @@ public class DefaultMappingStrategy implements MappingStrategy {
 			}
 		}
 
-		for (String name : setterNames) {
+		for (String name : aliasNames) {
 			Elements<? extends Field> sourceFields = sourceMapping.getElements(name);
 			for (Field sourceField : sourceFields) {
 				Elements<Getter> getters = sourceField.getGetters().map((e) -> e.rename(e.getName()));
@@ -198,6 +176,7 @@ public class DefaultMappingStrategy implements MappingStrategy {
 	public void transform(ObjectMapper objectMapper, Object source, TypeDescriptor sourceType,
 			MappingContext sourceContext, Mapping<? extends Field> sourceMapping, Field sourceField,
 			ObjectAccess targetAccess, MappingContext targetContext) throws MappingException {
+		String name = getName(sourceContext, sourceField);
 		for (Getter getter : sourceField.getGetters()) {
 			if (!predicateRegistry.test(getter)) {
 				continue;
@@ -208,7 +187,7 @@ public class DefaultMappingStrategy implements MappingStrategy {
 				continue;
 			}
 
-			Parameter parameter = new Parameter(sourceField.getName(), value, getter.getTypeDescriptor());
+			Parameter parameter = new Parameter(name, value, getter.getTypeDescriptor());
 			targetAccess.set(parameter);
 		}
 	}
